ava-rs/tui/src/chatwidget/tests/snapshots/ava_tui__chatwidget__tests__luna_reserve_usage_tests__luna_reserve_usage_narrow.snap
---
source: tui/src/chatwidget/tests/luna_reserve_usage_tests.rs
expression: "render_bottom_popup(&chat, 34)"
---

› Ask Ava to do anything

  Luna Reserve default · /tmp/pro…
